bugfix: - broken layout for long label in metadata - wrong argument name

--- a/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
+++ b/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
@@ -524,6 +524,8 @@
 .invariants-form .template-table .template-row .template-label {
   float: left;
   width: 45.5%;
+  padding-right: 10px;
+  box-sizing: border-box;
 }
 
 .invariants-form .template-table .template-half-width .template-label,
